Fix? for mobile being broken for no reason and only on phones not on mobile dev tools, awesome

--- a/Troop.client/src/assets/scss/main.scss
+++ b/Troop.client/src/assets/scss/main.scss
@@ -229,7 +229,6 @@ textarea{
 
 .troop-logo{
   height: 9vh;
-  width: 120%;
 }
 
 .input-dark{
@@ -264,5 +263,9 @@ textarea{
 
   .other{
     border-top-right-radius: 6px;
+  }
+
+  .troop-logo{
+    width: 120%;
   }
 }
